--- a/rettvu2024/src/components/Header/Header.css
+++ b/rettvu2024/src/components/Header/Header.css
@@ -51,12 +51,12 @@
 }
 
 .Header-link:hover{
-    background-color: rgb(255, 153, 0);
+    background-color: #ffde17;
     color: rgb(0, 36, 98);
 }
 
 .Heade-active{
-    background-color: rgb(255, 153, 0);
+    background-color: #ffde17;
     color: rgb(0, 36, 98);
     font-weight: 600;
 }
