--- a/rettvu2024/src/components/Travel/TravelInformation.css
+++ b/rettvu2024/src/components/Travel/TravelInformation.css
@@ -86,7 +86,7 @@
     align-items: center;
     overflow: hidden;
     width: 100%;
-    height: 500px;
+    aspect-ratio: 16/9;
     margin-top: 20px;
 }
 
