Add Call For Papers and Fix Data

--- a/rettvu2024/src/Responsive.css
+++ b/rettvu2024/src/Responsive.css
@@ -76,6 +76,14 @@
         gap   : 15px !important;
         margin: 10px 0 !important;
     }
+
+    .CallForPapers_img{
+        width: 90% !important;
+    }
+
+    .CallForPapers_img > a{
+        font-size: 16px !important;
+    }
 }
 
 @media screen and (max-width: 1000px) {
