--- a/rettvu2024/src/components/About/About.css
+++ b/rettvu2024/src/components/About/About.css
@@ -231,3 +231,15 @@
     font-size: 18px;
     font-weight: 500;
 }
+
+.Call-for-papers-link{
+    margin-top: 20px;
+    font-size: 18px;
+    font-weight: 500;
+    display: flex;
+    gap: 8px;
+    align-items: center;
+    justify-content: flex-start;
+    width: fit-content;
+    color: #0074e1;
+}
