--- a/rettvu2024/src/components/Header/Header.css
+++ b/rettvu2024/src/components/Header/Header.css
@@ -1,145 +1,147 @@
-.Header{
-    display: flex;
-    padding: 0 50px;
-    align-items: center;
-    justify-content: space-between;
-    height: 60px;
-    position: sticky;
-    top: 0;
-    z-index: 99;
-    background-color: #07223C;
-    gap: 30px;
+.Header {
+    display         : flex;
+    padding         : 0 50px;
+    align-items     : center;
+    justify-content : space-between;
+    height          : 60px;
+    position        : sticky;
+    top             : 0;
+    z-index         : 99;
+    background-color: #21409A;
+    gap             : 30px;
 
 }
 
-.Header-left{
-    display: flex;
+.Header-left {
+    display    : flex;
     align-items: center;
-    height: 100%;
+    height     : 100%;
 }
 
-.Header-name{
-    display: none;
-    font-size: 20px;
+.Header-name {
+    display    : none;
+    font-size  : 20px;
     font-weight: 700;
-    color: white;
-    width: fit-content;
+    color      : white;
+    width      : fit-content;
     margin-left: 10px;
 }
 
-.Header-right i{
-    color: white;
+.Header-right i {
+    color    : white;
     font-size: 20px;
 }
 
-.Header-logo{
-    display: flex;
+.Header-logo {
+    display     : flex;
     margin-right: 30px;
-    align-items: center;
+    align-items : center;
 }
 
-.Header-link{
-    height: 100%;
-    display: flex;
-    align-items: center;
+.Header-link {
+    height         : 100%;
+    display        : flex;
+    align-items    : center;
     justify-content: center;
-    color: white;
-    padding: 0 25px;
-    font-weight: 500;
-    font-size: 16px;
-    border: 4px solid transparent;
+    color          : white;
+    padding        : 0 25px;
+    font-weight    : 500;
+    font-size      : 16px;
+    border         : 4px solid transparent;
 }
 
-.Header-link:hover{
-    background-color: #f8f046;
-    color:  #07223C;;
+.Header-link:hover {
+    background-color: #ffde17;
+    color           : #21409A;
+    ;
 }
 
-.Heade-active{
-    background-color: #f8f046;
-    color:  #07223C;;
+.Heade-active {
+    background-color: #ffde17;
+    color           : #21409A;
+    ;
     font-weight: 600;
 }
 
-.Header-tab{
+.Header-tab {
     position: relative;
-    height: 100%;
-    cursor: pointer;
+    height  : 100%;
+    cursor  : pointer;
 }
 
-.Header-tab_child{
-    position: absolute;
+.Header-tab_child {
+    position        : absolute;
     background-color: white;
-    top: 70px;
-    visibility: hidden;
-    opacity: 0;
-    transition: 0.2s;
+    top             : 70px;
+    visibility      : hidden;
+    opacity         : 0;
+    transition      : 0.2s;
     transition-delay: 0.1s;
-    width: 200px;
-    z-index: 99;
-    box-shadow: 0px 0px 10px #00000033;
+    width           : 200px;
+    z-index         : 99;
+    box-shadow      : 0px 0px 10px #00000033;
 }
 
-.Header-tab_child::before{
-    position: absolute;
-    top: -3px;
-    left: 20px;
-    content: "";
-    width: 30px;
-    height: 30px;
+.Header-tab_child::before {
+    position        : absolute;
+    top             : -3px;
+    left            : 20px;
+    content         : "";
+    width           : 30px;
+    height          : 30px;
     background-color: white;
-    transform: rotate(45deg);
-    z-index: -1;
+    transform       : rotate(45deg);
+    z-index         : -1;
 }
 
-.Header-tab:hover .Header-tab_child{
+.Header-tab:hover .Header-tab_child {
     visibility: visible;
-    opacity: 1;
+    opacity   : 1;
 }
 
-.Header-tab_child a{
-    color: black;
-    display: flex;
-    text-align: left;
+.Header-tab_child a {
+    color          : black;
+    display        : flex;
+    text-align     : left;
     justify-content: flex-start;
-    padding: 13px 15px;
-    border-bottom: 1px solid rgba(170, 170, 170, 0.263);
+    padding        : 13px 15px;
+    border-bottom  : 1px solid rgba(170, 170, 170, 0.263);
 }
 
-.Header-group{
-    display: flex;
+.Header-group {
+    display    : flex;
     align-items: center;
-    gap: 10px;
+    gap        : 10px;
 }
 
-.Heade-group-active{
+.Heade-group-active {
     border-bottom: 4px solid #ffde17;
 }
 
-.Header-middle{
-    height: 100%;
-    display: flex;
+.Header-middle {
+    height     : 100%;
+    display    : flex;
     align-items: center;
-    flex: 1;
+    flex       : 1;
 }
 
-.Header-middle > input{
-    height: 38px;
-    font-weight: 500;
+.Header-middle>input {
+    height      : 38px;
+    font-weight : 500;
     padding-left: 10px;
-    width: 100%;
+    width       : 100%;
 }
 
 
-.Header-mobile-right{
+.Header-mobile-right {
     display: none;
 }
 
-.Header-mobile-right i{
-    color: white;
+.Header-mobile-right i {
+    color    : white;
     font-size: 25px;
 }
 
-.ant-drawer-body{
+.ant-drawer-body {
     padding: 10px !important;
 }
