--- a/rettvu2024/src/App.css
+++ b/rettvu2024/src/App.css
@@ -36,7 +36,7 @@ html {
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #07223C;
+  color: #21409A;
   gap: 10px;
   text-align: center;
 }
