--- a/rettvu2024/src/components/About/About.css
+++ b/rettvu2024/src/components/About/About.css
@@ -6,7 +6,7 @@
     align-items: flex-start;
     width: 100%;
     grid-template-areas: "about img"
-                        "topic img";
+        "topic img";
     grid-template-rows: auto 1fr;
     grid-template-columns: 1fr 1fr;
     margin-bottom: 30px;
@@ -28,7 +28,7 @@
 }
 
 .About_content_topics h2, .About_content_text h2 {
-    color: #07223C;
+    color: #21409A;
     font-size: 22px;
     margin-bottom: 10px;
 }
@@ -51,7 +51,7 @@
     object-fit: cover;
 }
 
-.About_image > span{
+.About_image>span {
     display: flex;
     color: rgb(104, 113, 118);
     font-size: 13px;
@@ -77,7 +77,7 @@
 .About_Important_Date h1 {
     padding: 5px;
     text-align: center;
-    color: #07223C;
+    color: #21409A;
     margin-bottom: 20px;
 }
 
@@ -88,7 +88,7 @@
     gap: 20px;
     padding: 0 50px;
 }
-    
+
 .About_content_layout {
     padding: 30px 30px;
     display: flex;
@@ -110,17 +110,17 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    color: #07223C;
+    color: #21409A;
     gap: 10px;
 }
 
-.ACL-flex h3{
+.ACL-flex h3 {
     color: #000000;
 }
 
 .ACL-flex h2 {
     font-weight: bold;
-    
+
 }
 
 .Speakers {
@@ -143,7 +143,7 @@
 .Speakers_tital h1 {
     padding: 5px;
     text-align: center;
-    color: #07223C;
+    color: #21409A;
 }
 
 .Speakers_item {
@@ -178,7 +178,7 @@
 .Submission_Guideline_tital h1 {
     padding: 5px;
     text-align: center;
-    color: #07223C;
+    color: #21409A;
 }
 
 .Submission_Guideline {
@@ -211,14 +211,14 @@
 .Submission_Guideline_body ul {
     margin-left: 20px;
     list-style-type: square;
- 
+
 }
 
-.Submission_Guideline_body ul li{
+.Submission_Guideline_body ul li {
     margin-bottom: 10px;
 }
 
-.Submission_Guideline_body ul li a{
+.Submission_Guideline_body ul li a {
     word-wrap: break-word;
 }
 
@@ -231,7 +231,7 @@
     font-weight: 500;
 }
 
-.Call-for-papers-link{
+.Call-for-papers-link {
     margin-top: 20px;
     font-size: 18px;
     font-weight: 500;
@@ -240,5 +240,5 @@
     align-items: center;
     justify-content: flex-start;
     width: fit-content;
-    color: #0074e1;
+    color: #21409A;
 }
