--- a/rettvu2024/src/components/Header/Header.css
+++ b/rettvu2024/src/components/Header/Header.css
@@ -7,7 +7,7 @@
     position: sticky;
     top: 0;
     z-index: 99;
-    background-color: #07223C;
+    background-color: #21409A;
     gap: 20px;
 
 }
