--- a/rettvu2024/src/components/Travel/TravelInformation.css
+++ b/rettvu2024/src/components/Travel/TravelInformation.css
@@ -61,7 +61,7 @@
 }
 
 .TravelInformation_item>h2 {
-    color: #07223C;
+    color: #21409A;
     font-family: Montserrat;
     background-color: rgba(224, 224, 224, 0.449);
     padding: 14px 10px 14px 20px;
@@ -159,7 +159,7 @@
 }
 
 .contact_item>h2 {
-    color: #07223C;
+    color: #21409A;
     font-family: Montserrat;
     background-color: rgba(224, 224, 224, 0.449);
     padding: 14px 10px 14px 20px;
