--- a/rettvu2024/src/components/Footer/Footer.css
+++ b/rettvu2024/src/components/Footer/Footer.css
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    background-color: #07223C;
+    background-color: #21409A;
     color: white;
     gap: 10px;
     padding: 25px 30px;
